[gd_scene load_steps=15 format=3 uid="uid://c4s4u67ieyi20"]

[ext_resource type="AudioStream" uid="uid://1u5tvu6e80ob" path="res://SFX/Death.wav" id="1_m5nhp"]
[ext_resource type="Script" path="res://Audio/audio_manager.gd" id="1_nb7ct"]
[ext_resource type="AudioStream" uid="uid://dbf4c60b6f8u1" path="res://SFX/EnemyDeath.wav" id="2_u135b"]
[ext_resource type="AudioStream" uid="uid://b05fxtqbom3i3" path="res://SFX/Fireball.mp3" id="3_ribln"]
[ext_resource type="AudioStream" uid="uid://dii58b6ams3fa" path="res://SFX/Hump.wav" id="4_iisr2"]
[ext_resource type="AudioStream" uid="uid://diub2hnrfsy65" path="res://SFX/Hurt.wav" id="5_b18sa"]
[ext_resource type="AudioStream" uid="uid://coq6sw5xa58u1" path="res://SFX/Skeleton.mp3" id="6_wgmu8"]
[ext_resource type="AudioStream" uid="uid://ct0v4d7y0m24m" path="res://SFX/SlimyWalk.mp3" id="7_88kbe"]
[ext_resource type="AudioStream" uid="uid://85wq66uteauy" path="res://Audio/Music/bgm - rocky ceiling.wav" id="9_iai35"]
[ext_resource type="AudioStream" uid="uid://dj0lvayw3nraa" path="res://SFX/Fireball_2.mp3" id="9_quo4y"]
[ext_resource type="AudioStream" uid="uid://roayu4ry31ju" path="res://SFX/Fire_bounce.wav" id="10_lpvq0"]
[ext_resource type="AudioStream" uid="uid://bnb2568ianjxe" path="res://Audio/Music/paused theme - tranquil.wav" id="10_qr0xn"]
[ext_resource type="AudioStream" uid="uid://cwcvjxq2jgvld" path="res://SFX/Crumbling - Sound effect.mp3" id="11_cggv6"]
[ext_resource type="AudioStream" uid="uid://c57s85vvp8xqe" path="res://Audio/Music/16-Bit Cave.mp3" id="14_3eunh"]

[node name="audioManager" type="Node"]
script = ExtResource("1_nb7ct")

[node name="sfx" type="Node" parent="."]

[node name="Death" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("1_m5nhp")
volume_db = -5.0

[node name="EnemyDeath" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("2_u135b")
volume_db = -12.0

[node name="Fireball" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("3_ribln")
volume_db = -5.0
pitch_scale = 2.0

[node name="Jump" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("4_iisr2")
volume_db = -15.0

[node name="Hurt" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("5_b18sa")
volume_db = -5.0

[node name="Skeleton" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("6_wgmu8")
volume_db = -15.0

[node name="SlimyWalk" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("7_88kbe")

[node name="Fireball2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("9_quo4y")
volume_db = -20.0

[node name="FireBounce" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("10_lpvq0")
volume_db = -17.0

[node name="Crumbling-SoundEffect" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("11_cggv6")
volume_db = -20.0

[node name="music" type="Node" parent="."]

[node name="Bgm-RockyCeiling" type="AudioStreamPlayer" parent="music"]
process_mode = 3
stream = ExtResource("9_iai35")
volume_db = -15.0

[node name="PausedTheme-Tranquil" type="AudioStreamPlayer" parent="music"]
process_mode = 3
stream = ExtResource("10_qr0xn")
volume_db = -10.0

[node name="16-bitCave" type="AudioStreamPlayer" parent="music"]
process_mode = 3
stream = ExtResource("14_3eunh")
volume_db = -10.0
