extends Node
#sFx
@onready var scored = $sfx/EnemyDeath
@onready var Death = $sfx/Death
@onready var skele_death = $sfx/Skeleton
@onready var fireball = $sfx/Fireball
@onready var slimey = $sfx/SlimyWalk
@onready var Jump = $sfx/Jump
@onready var Hurt = $sfx/Hurt
@onready var fireball_2 = $sfx/Fireball2
@onready var fire_bounce = $sfx/FireBounce
@onready var Crmble = $"sfx/Crumbling-SoundEffect"
#Music 
@onready var BGM_1 = $"music/16-bitCave"
@onready var BGM_2 = $"music/Bgm-RockyCeiling"
@onready var BGM_3 = $"music/PausedTheme-Tranquil"
